--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ supafunc==0.4.5
 tldextract==5.1.2
 Twisted==24.3.0
 typing_extensions==4.11.0
-urllib3==2.2.1
-w3lib==2.1.2
-websockets==12.0
-zope.interface==6.3
+urllib3
+w3lib
+websockets
+zope.interface
