--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,3 @@
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==23.2.0
-Automat==22.10.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-constantly==23.10.4
-cryptography==42.0.5
-cssselect==1.2.0
-deprecation==2.1.0
-exceptiongroup==1.2.0
-filelock==3.13.4
-gotrue==2.4.2
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-hyperlink==21.0.0
-idna==3.7
-incremental==22.10.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-jmespath
-lxml==5.2.1
-packaging==24.0
-parsel==1.9.1
-postgrest==0.16.3
-Protego==0.3.1
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pydantic==2.7.0
-pydantic_core==2.18.1
-PyDispatcher==2.0.7
-pyOpenSSL==24.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-queuelib==1.6.2
-realtime==1.0.4
-requests==2.31.0
-requests-file==2.0.0
-Scrapy==2.11.1
-service-identity==24.1.0
-six==1.16.0
-sniffio==1.3.1
-storage3==0.7.4
-StrEnum==0.4.15
-supabase==2.4.2
-supafunc==0.4.5
-tldextract==5.1.2
-Twisted==24.3.0
-typing_extensions==4.11.0
-urllib3
-w3lib
-websockets
-zope.interface
+python-dotenv
+supabase
 scrapy-fake-useragent
